# Rust_API

./: Cargo.toml
src/: error.rs  lib.rs
src/client/: client.rs
src/http/: client.rs  error.rs  mod.rs  request.rs
src/model/: mod.rs
src/websocket/: client.rs  error.rs  mod.rs
