[package]
name = "ferrischat"
version = "0.0.1"
edition = "2021"
license = "EUPL-1.2"
description = "A API wrapper for the FerrisChat API"
homepage = "https://ferris.chat"
documentation = "https://docs.rs/ferrischat"
repository = "https://github.com/FerrisChat/ferrischat.rs"
# readme = "README.md"
include = [
  "src/**/*",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

[dependencies]
serde_json = "1.0"
async-trait = "0.1"
url = "2.2"

[dependencies.reqwest]
default-features = false
features = ["json", "multipart", "stream", "gzip"]
optional = true
version = "0.11"

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt", "sync", "time"]

[dependencies.tokio-tungstenite]
version = "0.16"
default-features = false
optional = true
features = ["connect"]

[dependencies.ferrischat_common]
version = "0.2"
git = "https://github.com/FerrisChat/Common"

[features]
default = ["rustls_tls", "all"]

http = []
model = []
websocket = []

all = ["http", "model", "websocket"]

rustls_tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls-tls"]

native_tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
